RESOLVED FIXED265908
[UnifiedPDF] Cursor updates are incorrect over text/image elements for untagged PDFs.
https://bugs.webkit.org/show_bug.cgi?id=265908
Summary [UnifiedPDF] Cursor updates are incorrect over text/image elements for untagg...
Abrar Rahman Protyasha
Reported 2023-12-05 14:52:15 PST
`CGPDFPageLayoutGetAreaOfInterestAtPoint` does not produce correct results for untagged PDFs, so cursor updates (w.r.t. image/text PDF elements) are wrong.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-05 14:52:23 PST
Abrar Rahman Protyasha
Comment 2 2024-02-24 11:20:29 PST
EWS
Comment 3 2024-02-24 14:24:54 PST
Committed 275287@main (bcb2f892a5d1): <https://commits.webkit.org/275287@main> Reviewed commits have been landed. Closing PR #25064 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.