[UnifiedPDF] Cursor updates are incorrect over text/image elements for untagged PDFs. https://bugs.webkit.org/show_bug.cgi?id=265908 rdar://119217538

Reviewed by Tim Horton.

The CGPDFPageLayoutGetAreaOfInterestAtPoint interface does not correctly
identify text/image elements on Untagged PDF files. This made our hit
test results incomplete on said PDF files. To address this issue, we
adopt new PDFPage API `areaOfInterestAtPoint`, which not only hit tests
for annotations, but also for text and image on a page, thus subsuming
both -[PDFPage annotationAtPoint:] and CGPDFPageLayoutGetAreaOfInterestAtPoint
while maintaining correctness across tagged and untagged PDFs.

* Source/WebKit/Platform/spi/Cocoa/PDFKitSPI.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::pdfElementTypesForPluginPoint const):

Canonical link: https://commits.webkit.org/275287@main